--- a/Pokemon.cbp
+++ b/Pokemon.cbp
@@ -31,8 +31,13 @@
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
+			<Add directory="D:/Download/SDL2_image-2.0.5/i686-w64-mingw32/include/SDL2" />
 		</Compiler>
-		<Unit filename="main.cpp" />
+		<Linker>
+			<Add option="-lmingw32 -lSDL2main -lSDL2 -lSDL2_image" />
+			<Add directory="D:/Download/SDL2_image-2.0.5/i686-w64-mingw32/lib" />
+		</Linker>
+		<Unit filename="SDL.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
