--- a/Pokemon.cbp
+++ b/Pokemon.cbp
@@ -37,7 +37,9 @@
 			<Add option="-lmingw32 -lSDL2main -lSDL2 -lSDL2_image" />
 			<Add directory="D:/Download/SDL2_image-2.0.5/i686-w64-mingw32/lib" />
 		</Linker>
-		<Unit filename="SDL.cpp" />
+		<Unit filename="SDL.cpp">
+			<Option weight="0" />
+		</Unit>
 		<Extensions>
 			<code_completion />
 			<envvars />
