--- a/Pokemon.cbp
+++ b/Pokemon.cbp
@@ -35,7 +35,7 @@
 		</Compiler>
 		<Linker>
 			<Add option="-lmingw32 -lSDL2main -lSDL2 -lSDL2_image" />
-			<Add option="-lSDL2_ttf" />
+			<Add option="-lSDL2_ttf -lSDL2_mixer" />
 			<Add directory="D:/Download/SDL2_image-2.0.5/i686-w64-mingw32/lib" />
 		</Linker>
 		<Unit filename="SDL.cpp">
